dovecot/dovecot-pigeonhole/tests/extensions/include/errors/include-limit.sieve
require "include";

include "rfc-ex1-always_allow";
include "rfc-ex2-spam_filter_script";
include "rfc-ex1-mailing_lists";
include "rfc-ex1-spam_tests";
